<resources>
    <string name="app_name">Multilingual Typing Assistant</string>
    <string name="choose_lang">Choose Language</string>
    <string name="lauguage">Language</string>
    <string name="tap_to_speak">Tap to speak</string>
    <string name="selected">selected</string>
    <string name="share">Share</string>
    <string name="circle">circle</string>
    <string name="mic_icon">Mic Icon</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="share_this_app">Share this app</string>
    <string name="refer_friend">Refer Friend</string>
    <string name="feedback">Provide feedback</string>
    <string name="want_to_contact">MTA App user wants to contact you</string>
    <string name="hitham_email">hithamcreations@gmail.com</string>
    <string name="hello_hitham">Hello HithAM,</string>
    <string name="please_enter_msg_here"><![CDATA[<< -- Please enter your message here -->>]]></string>
    <string name="regards">Regards,</string>
    <string name="multilingual_user">Multi-lingual Texting Assistant User</string>
    <string name="FRAMING_EMAIL">Framing email for you</string>
    <string name="kannada_prompt">ಏನಾದರು ಹೇಳಿ</string>
    <string name="hindi_prompt">कुछ सुनाओ</string>
    <string name="malayalam_prompt">എന്തെങ്കിലും പറയൂ</string>
    <string name="telugu_prompt">ఏదైనా చెప్పు</string>
    <string name="tamil_prompt">ஏதாவது கூறுங்கள்</string>
    <string name="english_prompt">Say something</string>
    <string name="marathi_prompt">काहीतरी बोला</string>
    <string name="gujarathi_prompt">કંઈક બોલ</string>
</resources>
