<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/change_lang_id"
            android:title="@string/lauguage"
            android:orderInCategory="100"
            android:icon="@drawable/lang_icon"
            app:showAsAction="ifRoom"
    />

    <item
            android:id="@+id/rate_app_id"
            android:title="@string/rate_this_app"
            app:showAsAction="collapseActionView"
            android:orderInCategory="101"/>

    <item
            android:id="@+id/share_app_id"
            android:title="@string/refer_friend"
            app:showAsAction="collapseActionView"
            android:orderInCategory="90"/>

    <item
            android:id="@+id/feedback_id"
            android:title="@string/feedback"
            app:showAsAction="collapseActionView"
            android:orderInCategory="102"/>

</menu>