<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
                android:id="@+id/mic_layout_id"
                android:layout_width="200dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.41000003">


            <ImageView
                    android:id="@+id/accentOvalId"
                    android:background="@drawable/circle_accent"
                    android:layout_gravity="center"
                    android:layout_width="140dp"
                    android:layout_height="140dp" android:contentDescription="@string/circle"/>


            <ImageView
                    android:id="@+id/primaryOvalId"
                    android:background="@drawable/circle_purple"
                    android:layout_gravity="center"
                    android:layout_width="130dp"
                    android:layout_height="130dp" android:contentDescription="@string/circle"/>

            <ImageView
                    android:id="@+id/micId"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/mic_icon"
                    android:layout_gravity="center"
                    android:contentDescription="@string/mic_icon"/>

        </FrameLayout>

        <TextView
                android:text="@string/tap_to_speak"
                android:id="@+id/result_text_id"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/mic_layout_id"
                app:layout_constraintHorizontal_bias="0.0"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/result_text_id" android:layout_marginTop="50dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/copy_content_fab_id"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/copy_icon"
                    android:focusable="true"
                    android:elevation="6dp"
                    app:fabSize="normal"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/share_content_fab_id"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/share_icon"
                    android:focusable="true"
                    android:elevation="6dp"
                    app:fabSize="normal"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>